--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
   },
   "dependencies": {
     "expo": "~52.0.43",
+    "expo-media-library": "^17.0.6",
+    "expo-sharing": "^13.0.1",
     "expo-status-bar": "~2.0.1",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.3.1",
-    "react-native": "0.76.9"
+    "react-native": "0.76.9",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-svg": "^15.11.2",
+    "react-native-view-shot": "^4.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-private-methods": "^7.25.9"
   },
   "private": true
 }
