--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-svg": "^15.11.2",
+    "react-native-svg-transformer": "^1.5.0",
     "react-native-view-shot": "^4.0.3"
   },
   "devDependencies": {
