--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-svg": "^15.11.2",
-    "react-native-svg-transformer": "^1.5.0",
     "react-native-view-shot": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/plugin-transform-private-methods": "^7.25.9"
+    "@babel/plugin-transform-private-methods": "^7.25.9",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "metro-react-native-babel-transformer": "^0.77.0",
+    "react-native-svg-transformer": "^1.5.0"
   },
   "private": true
 }
